# QtCookerControl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  maintest.cpp  speed.cpp  speed.hpp
ui/: WeightControl.cpp  WeightControl.h  speed.cpp  speed.h  temperaturecontrol.cpp  temperaturecontrol.h  timercontrol.cpp  timercontrol.h
